--- a/static/css/indexcajacomentario.css
+++ b/static/css/indexcajacomentario.css
@@ -279,10 +279,18 @@ input{
   margin-left: 2rem;
   margin-top: 0.5em;
 }
+.usuario-rta{
+  color:rgb(131, 164, 214);
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
 
 .respuesta-comentario{
   margin-top: 5px;
   margin-bottom: 5px;
+  margin-left: 2rem;
+  color: white;
+  font-size: 0,9rem;
 }
 
 #texto-respuesta-8{
