cambie nombre titulos

--- a/templates/index/dprogramacionindex.html
+++ b/templates/index/dprogramacionindex.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/static/css/dprogramacion.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
 
-    <title>dprogramacion</title>
+    <title>Rama programacion</title>
 </head>
 <body>
     <div id="toggle">
