--- a/templates/index/indexdcuarto.html
+++ b/templates/index/indexdcuarto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d4to.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
-    <title>programacion  y programacion cuarto</title>
+    <title>Programacion 4to </title>
 </head>
 <body>
     <div id="toggle">
