--- a/templates/index/indexsexto.html
+++ b/templates/index/indexsexto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d6to.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
-    <title>programacion sexto</title>
+    <title>Programacion 6to</title>
 </head>
 <body>
     <div id="toggle">
