--- a/templates/index/indexdquinto.html
+++ b/templates/index/indexdquinto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d5to.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
-    <title>programacion quinto</title>
+    <title>Programacion 5to</title>
 </head>
 <body>
     <div id="toggle">
