--- a/templates/index/indexdseptimo.html
+++ b/templates/index/indexdseptimo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d7mo.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
-    <title> programacion septimo </title>
+    <title> Programacion 7to </title>
 </head>
 <body>
     <div id="toggle">
