--- a/templates/index/indexlbproc.html
+++ b/templates/index/indexlbproc.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Comentarios con Menú</title>
+  <title>Procesos Industriales</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
   <link rel="stylesheet" href="/static/css/barralateral.css"/>
 </head>
