--- a/templates/index/indexlbssdig.html
+++ b/templates/index/indexlbssdig.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Comentarios con Menú</title>
+  <title>Sistemas Digitales</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
 </head>
 <body>
