--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -7,14 +7,25 @@
     <link rel="stylesheet" href="/static/css/estilocrearcuenta.css">
 </head>
 <body>
+
+
+<div class="fondo">
+    <video autoplay muted loop  class="video">
+  <source src="/static/utils/img/fondo_login.mp4" type="video/mp4" />
+  </video>
+  </div>
+
     <main class="contenedor">
   <!-- Columna izquierda: Mascota -->
   <section class="presentacion">
     <figure class="cota">
       <figcaption class="globo">¡Hola camarada! Me presento, yo soy Zettino</figcaption>
-      <img class="masimg" src="/static/utils/img/zettino_sinfondo.png" alt="Mascota Zettino">
+      <img class="masimg" src="/static/utils/img/zettino_i_c.png" alt="Mascota Zettino">
     </figure>
   </section>
+
+  
+
 
   <!-- Columna derecha: Formulario -->
   <section class="formulario">
