--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -31,7 +31,7 @@
     <div class="coso-blanco">  
 <!-- puse tdo lo de el coso blanco  -->
       <h1><strong>C.E.T</strong></h1>
-      <h2>Comunidad Educativa Técnica4</h2>
+      <h2>Comunidad Educativa Técnica</h2>
       <p>
         Creada por y para estudiantes técnicos, donde el objetivo principal es ayudarnos entre nosotros a resolver dudas, compartir conocimientos y superar juntos los desafíos de las materias de la escuela técnica.
       </p>
