--- a/templates/index/indexcrearcuenta.html
+++ b/templates/index/indexcrearcuenta.html
@@ -16,18 +16,15 @@
   </div>
 
     <main class="contenedor">
-  <!-- Columna izquierda: Mascota -->
+  <!-- Mascota arriba -->
   <section class="presentacion">
     <figure class="cota">
       <figcaption class="globo">¡Hola camarada! Me presento, yo soy Zettino</figcaption>
-      <img class="masimg" src="/static/utils/img/zettino_i_c.png" alt="Mascota Zettino">
+      <img class="masimg" src="/cet4/static/utils/img/zettinocrea.png" alt="Mascota Zettino">
     </figure>
   </section>
 
-  
-
-
-  <!-- Columna derecha: Formulario -->
+  <!-- Formulario debajo -->
   <section class="formulario">
     <header>
       <h1>¡Bienvenido!</h1>
@@ -41,7 +38,7 @@
         <label for="email">Correo electrónico</label>
         <input type="email" id="email" name="email" required>
       </div>
-      <!-- es type password y no type text para q los caracters se vean como puntitos--> 
+
       <div class="input-group">
         <label for="password">Contraseña</label>
         <input type="password" id="password" name="password" required>
