--- a/templates/index/indexin7mo.html
+++ b/templates/index/indexin7mo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/d7mo.css">
     <link rel="stylesheet" href="/static/css/barralateral.css"/>
-    <title>programacion  y programacion cuarto</title>
+    <title>7to-informatica</title>
 </head>
 <body>
     
