--- a/templates/index/indexprincipal.html
+++ b/templates/index/indexprincipal.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> C.E.T.4</title>
+  <title> C.E.T</title>
   <link rel="stylesheet" href="/static/css/style_principal.css">
   <link rel="stylesheet" href="{{ url_for('static', filename='estilos.css') }}">
 </head>
