cambiamos las rutas de python para que sean menos lineas, haciendo una ruta dinamica, ademas pudimos hacer los href de las materias y tuvimos que modificar el js para que muestre correctamente los comentarios (ruta de fetch)

--- a/templates/index/indexin4to.html
+++ b/templates/index/indexin4to.html
@@ -37,25 +37,25 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/informatica/4toinformatica/1" class="texto-superpuesto"> lab de aplicaciones </a>
+        <a href="/comentario/materias/1" class="texto-superpuesto"> lab de aplicaciones </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/informatica/4toinformatica/4" class="texto-superpuesto">lab de programacion</a>
+        <a  href="/comentario/materias/4" class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/informatica/4toinformatica/labso" class="texto-superpuesto">lab de sistemas operativos </a>
+        <a href="/comentario/materias/2" class="texto-superpuesto">lab de sistemas operativos </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/4toinformatica/labhard" class="texto-superpuesto">lab de hardware </a>
+        <a href="/comentario/materias/3" class="texto-superpuesto">lab de hardware </a>
     
     </div>
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/4toinformatica/electronica" class="texto-superpuesto">electronica </a>
+        <a href="/comentario/materias/5" class="texto-superpuesto">electronica </a>
     
     </div>
     </div>
