arregle las rutas del html que llevaban a los comentarios

--- a/templates/index/indexin5to.html
+++ b/templates/index/indexin5to.html
@@ -36,28 +36,28 @@
              <br>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/informatica/5toinformatica/labso" class="texto-superpuesto"> lab de sistemas opretativos </a>
+        <a href="/comentario/materias/18" class="texto-superpuesto"> lab de sistemas operativos </a>
       </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/informatica/5toinformatica/labhard" class="texto-superpuesto">lab de hardware</a>
+        <a  href="/comentario/materias/20" class="texto-superpuesto">lab de hardware</a>
      </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/informatica/5toinformatica/labprog" class="texto-superpuesto">lab de programacion </a>
+        <a href="/comentario/materias/21" class="texto-superpuesto">lab de programacion </a>
      </div>
      <br>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/5toinformatica/sistdig" class="texto-superpuesto">sistemas digitales </a>
+        <a href="/comentario/materias/19" class="texto-superpuesto">sistemas digitales </a>
      </div>
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/5toinformatica/teleinf" class="texto-superpuesto">teleinformatica </a>
+        <a href="/comentario/materias/17" class="texto-superpuesto">teleinformatica </a>
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/5toinformatica/labapss" class="texto-superpuesto">lab de aplicaciones </a>
+        <a href="/comentario/materias/22" class="texto-superpuesto">lab de aplicaciones </a>
      </div>
 
     <div class="footer">  
