--- a/templates/index/indexin7mo.html
+++ b/templates/index/indexin7mo.html
@@ -36,39 +36,39 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/informatica/7toinformatica/proysis" class="texto-superpuesto"> proyecto sist  </a>
+        <a href="/comentario/materias/45" class="texto-superpuesto"> proyecto sist  </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/informatica/7toinformatica/imyrredes" class="texto-superpuesto">imyr redes</a>
+        <a  href="/comentario/materias/46" class="texto-superpuesto">imyr redes</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/informatica/7toinformatica/modysis" class="texto-superpuesto">modelos y sistemas</a>
+        <a href="/comentario/materias/47" class="texto-superpuesto">modelos y sistemas</a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/7toinformatica/basedatos" class="texto-superpuesto">base de datos  </a>
+        <a href="/comentario/materias/50" class="texto-superpuesto">base de datos  </a>
     </div>
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/7toinformatica/empproddl" class="texto-superpuesto">empr.prod y dl</a>
-    </div>
-    
-        <div class="bloque-superpuesto">
-        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/7toinformatica/imyrsis" class="texto-superpuesto">imir sistemas</a>
+        <a href="/comentario/materias/51" class="texto-superpuesto">empr.prod y dl</a>
     </div>
     
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/7toinformatica/practprof" class="texto-superpuesto">practica profesional</a>
+        <a href="/comentario/materias/49" class="texto-superpuesto">imir sistemas</a>
     </div>
     
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/7toinformatica/evalproy" class="texto-superpuesto">evaluacion proyectos</a>
+        <a href="/comentario/materias/52" class="texto-superpuesto">practica profesional</a>
+    </div>
+    
+        <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href="/comentario/materias/48" class="texto-superpuesto">evaluacion proyectos</a>
     </div>
 </div>
    
