--- a/templates/index/indexin6to.html
+++ b/templates/index/indexin6to.html
@@ -36,38 +36,35 @@
              <br>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexlbprog.html" class="texto-superpuesto"> lab de programacion </a>
-        <a href="/informatica/6toinformatica/labprog" class="texto-superpuesto"> lab de programacion</a>
+        <a href="/comentario/materias/30" class="texto-superpuesto"> lab de programacion</a>
      </div>
        <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a  href="/templates/index/indexlbapli.html" class="texto-superpuesto">lab de aplicaciones</a>
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a  href="/informatica/6toinformatica/labapp" class="texto-superpuesto">lab de aplicaciones</a>
+        <a  href="/comentario/materias/31" class="texto-superpuesto">lab de aplicaciones</a>
      </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href="/templates/index/indexlbhardw.html" class="texto-superpuesto">lab de hardware</a>
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/informatica/6toinformatica/labhard" class="texto-superpuesto">lab de hardware</a>
+        <a href="/comentario/materias/34" class="texto-superpuesto">lab de hardware</a>
      </div>
      <br>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/6toinformatica/labso" class="texto-superpuesto">lab sistemas operativos </a>
+        <a href="/comentario/materias/36" class="texto-superpuesto">lab sistemas operativos </a>
      </div>
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/6toinformatica/sisdig" class="texto-superpuesto">sistemas digitales </a>
+        <a href="/comentario/materias/32" class="texto-superpuesto">sistemas digitales </a>
      </div>
     
         <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/6toinformatica/seginf" class="texto-superpuesto">segur.inform </a>
+        <a href="/comentario/materias/35" class="texto-superpuesto">segur.inform </a>
      </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/informatica/6toinformatica/invope" class="texto-superpuesto">Inv operativa </a>
+        <a href="/comentario/materias/33" class="texto-superpuesto">Inv operativa </a>
      </div>
    </div>
     <div class="footer">  
