arregle las rutas a las que te llevaban los hrefs de los htmls de las materias de la orientacion de programacion

--- a/templates/index/indexdquinto.html
+++ b/templates/index/indexdquinto.html
@@ -36,24 +36,29 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href='/programacion/5toprogramacion/labdiseñoweb' class="texto-superpuesto">lab diseño web</a>
+        <a href='/comentario/materias/12' class="texto-superpuesto">lab diseño web</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href='/programacion/5toprogramacion/labprogramacion' class="texto-superpuesto">lab de programacion</a>
+        <a href='/comentario/materias/11' class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href='/programacion/5toprogramacion/labbasededatos' class="texto-superpuesto">lab de base de datos </a>
+        <a href='/comentario/materias/14' class="texto-superpuesto">lab de base de datos </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href='/programacion/5toprogramacion/labredes' class="texto-superpuesto">lab de redes </a>
+        <a href='/comentario/materias/15' class="texto-superpuesto">lab de redes </a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href='/programacion/5toprogramacion/modysistemas' class="texto-superpuesto">modelos y sistemas  </a>
+        <a href='/comentario/materias/16' class="texto-superpuesto">modelos y sistemas  </a>
+
+    </div>
+      <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
+        <a href='/comentario/materias/13' class="texto-superpuesto">sistemas digitales</a>
 
     </div>
 
