--- a/templates/index/indexdseptimo.html
+++ b/templates/index/indexdseptimo.html
@@ -38,39 +38,39 @@
 
         <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-            <a href='/programacion/7moprogramacion/PytoSistWd' class="texto-superpuesto">Proy I SIST WD  </a>
+            <a href='/comentario/materias/41' class="texto-superpuesto">Proy I SIST WD  </a>
         </div>
 
         <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-            <a href='/programacion/7moprogramacion/PdSoftPMov' class="texto-superpuesto">PD SOFT P MOV </a> 
+            <a href='/comentario/materias/43' class="texto-superpuesto">PD SOFT P MOV </a> 
         </div>
 
         <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-            <a href='/programacion/7moprogramacion/ModSistemas' class="texto-superpuesto">MOD. Y SIST </a>
+            <a href='/comentario/materias/38' class="texto-superpuesto">Modelos y Sistemas </a>
         </div>
 
         <br>
         <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-            <a href='/programacion/7moprogramacion/PdiSistComp' class="texto-superpuesto">PDI SIST COMP </a>
+            <a href='/comentario/materias/42' class="texto-superpuesto">PDI SIST COMP </a>
         </div>
        <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-            <a href='/programacion/7moprogramacion/EmprProdDl' class="texto-superpuesto"> EMP.PROD Y DL </a>
+            <a href='/comentario/materias/39' class="texto-superpuesto"> EMP.PROD Y DL </a>
         </div>
         <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-            <a href='/programacion/7moprogramacion/OrgMetodos' class="texto-superpuesto"> org metodos </a>
+            <a href='37' class="texto-superpuesto"> org metodos </a>
         </div>
         <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-            <a href='/programacion/7moprogramacion/PractProf' class="texto-superpuesto"> Pratica profesional </a>
+            <a href='/comentario/materias/44' class="texto-superpuesto"> Pratica profesional </a>
         </div>
         <div class="bloque-superpuesto">
             <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-            <a href='/programacion/7moprogramacion/EvalPytos' class="texto-superpuesto"> evaluacion proyectos </a>
+            <a href='/comentario/materias/40' class="texto-superpuesto"> evaluacion proyectos </a>
         </div>
     </div>
 
