--- a/templates/index/indexsexto.html
+++ b/templates/index/indexsexto.html
@@ -37,29 +37,33 @@
              <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="4to">
-        <a href='/programacion/6toprogramacion/LabProgramacion' class="texto-superpuesto">lab de programacion</a>
+        <a href='/comentario/materias/27' class="texto-superpuesto">lab de programacion</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/programacion/6toprogramacion/LabProcesosIndustriales" class="texto-superpuesto">lab.proc.ind</a>
+        <a href="/comentario/materias/28" class="texto-superpuesto">lab.proc.ind</a>
     </div>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href="/programacion/6toprogramacion/LabWebDinamica" class="texto-superpuesto">des.api.WEB DINAMICA </a>
+        <a href="/comentario/materias/24" class="texto-superpuesto">des.api.WEB DINAMICA </a>
     </div>
     <br>
     <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia2">
-        <a href="/programacion/6toprogramacion/LabSeguridadInformática" class="texto-superpuesto">seguridad informatica</a>
+        <a href="/comentario/materias/26" class="texto-superpuesto">seguridad informatica</a>
 
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href='/programacion/6toprogramacion/LabSistemaGestion' class="texto-superpuesto">sistemas de gestion  </a>
+        <a href='/comentario/materias/23' class="texto-superpuesto">sistemas de gestion  </a>
     </div>
      <div class="bloque-superpuesto">
         <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
-        <a href='/programacion/6toprogramacion/LabWebEstatica' class="texto-superpuesto">web estatica </a>
+        <a href='/comentario/materias/29' class="texto-superpuesto">web estatica </a>
+    </div>
+      <div class="bloque-superpuesto">
+        <img src="/static/utils/img/materia1.png" alt="Materias" class="materia1">
+        <a href='/comentario/materias/25' class="texto-superpuesto">sistemas digitales</a>
     </div>
     <div class="footer">  
     </div>
