cree la pagina donde nos promocionamos nosotros  e hice el link desde la central de ayuda

--- a/templates/nosotros.html
+++ b/templates/nosotros.html
@@ -60,8 +60,8 @@
       </article>
 
       <article class="card">
-        <img src="/static/utils/img/nosotros_lol.png" alt="Ícono de Nosotros" >
-        <a href="/CET4/templates/nosotros.html">nosotros</a>
+        <img src="/static/utils/img/nosotros_lol.png" alt="Ícono de Nosotros">
+        <h2>Nosotros</h2>
         <p>Los invitamos a conocernos un poco mejor</p>
       </article>
 
