--- a/templates/index/ApartadoFuentes.html
+++ b/templates/index/ApartadoFuentes.html
@@ -6,6 +6,7 @@
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
    <link rel="stylesheet" href="/static/css/barralateral.css"/>
+   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
 </head>
 <body>
   <div id="toggle">
@@ -31,20 +32,13 @@
       <h1>{{materias.nom_mat}} </h1>
       <span class="flechas" aria-hidden="true">◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀</span>
     </header>
-    <!-- el section de abajo es para elegir entre las fuentes y los comentarios-->
-    <section id="menues">
-      <a href="/templates/index/ComentariosParaTodos.html">Comentarios</a>
-      <a href="/templates/index/ApartadoFuentes.html">Fuentes</a>
+    
+    <section id="fuentes">
+        <p></p>
+        <p></p>
+        <p></p>
     </section>
 
-<section class="caja-comentario">
-      <form id="commentForm">
-        <input type="text" id="titulo" name="titulo" placeholder="Título de la pregunta" required>
-        <textarea id="comentario" name="comentario" placeholder="Escribe tu comentario..." required></textarea>
-        <input type="hidden" id="id_mat" name="id_mat" value="{{ id_mat }}">
-        <button type="submit">Enviar</button>
-      </form>
-      <div id="commentsSection"></div>
   </main>
 <script src="/static/js/comentarios.js"></script>
 <script src="/static/js/barralateral.js"></script>
