intento casi funcional de hacer los apartados de comentarios y fuentes (hrefs listos faltan las conexiones con la bd)

--- a/templates/index/ApartadoFuentes.html
+++ b/templates/index/ApartadoFuentes.html
@@ -29,15 +29,19 @@
   <main class="comentarios">
     <header class="comentarios-header">
       <span class="flechas" aria-hidden="true">▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶▶</span>
-      <h1>{{materias.nom_mat}} </h1>
+      <h1>Inserta Materia (error jinja) </h1>
       <span class="flechas" aria-hidden="true">◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀◀</span>
     </header>
-    
-    <section id="fuentes">
-        <p></p>
-        <p></p>
-        <p></p>
+     <section id="menues">
+      <a href="/comentario/materias/1">Comentarios</a>
+      <a href="/fuentes/materias/1">Fuentes</a>
     </section>
+    
+    <div id="fuentes">
+        <p>Fuente 1 <a> hola.com</a></p>
+        <p>Fuente 2 <a> chau.com.ar</a></p>
+        <p>Fuente 3 <a> MIAMEEEE.edu.gob.ar</a></p>
+    </div>
 
   </main>
 <script src="/static/js/comentarios.js"></script>
