--- a/static/css/ApartadoFuentes.css
+++ b/static/css/ApartadoFuentes.css
@@ -1,4 +1,18 @@
 p{
     display: block;
     font-size: 2em;
+    color: azure;
+    padding-left: 15px;
+    padding-top: 15px;
+    padding-bottom: 25px;
+}
+#fuentes{
+    width: 80%;
+    height: 30em;
+    background-color: rgb(7, 17, 96);
+}
+
+#menues{
+    font-size: 20px;
+    background-color: aliceblue;
 }
