--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -6,6 +6,7 @@
   <title>Comentarios con Menú</title>
   <link rel="stylesheet" href="/static/css/indexcajacomentario.css" />
    <link rel="stylesheet" href="/static/css/barralateral.css"/>
+   <link rel="stylesheet" href="/static/css/ApartadoFuentes.css"/>
 </head>
 <body>
   <div id="toggle">
@@ -34,7 +35,7 @@
     <!-- el section de abajo es para elegir entre las fuentes y los comentarios-->
     <section id="menues">
       <a href="/templates/index/ComentariosParaTodos.html">Comentarios</a>
-      <a href="/templates/index/ApartadoFuentes.html">Fuentes</a>
+      <a href="/fuentes/materias/1">Fuentes</a>
     </section>
 
 <section class="caja-comentario">
