--- a/templates/index/ComentariosParaTodos.html
+++ b/templates/index/ComentariosParaTodos.html
@@ -34,6 +34,7 @@
     </header>
     <!-- el section de abajo es para elegir entre las fuentes y los comentarios-->
     <section id="menues">
+      <button href="#" id="ordenar">&#11015; Ordenar por</button>
       <a href="/templates/index/ComentariosParaTodos.html">Comentarios</a>
       <a href="/fuentes/materias/1">Fuentes</a>
     </section>
